# libdop

./: .gitignore  CMakeLists.txt  ChangeLog.md  Doxyfile  Makefile  NEWS.md  README.md
docs/: dir_2ffc887c0e5f8b03526c926d4d01f8b9.html  dir_2ffc887c0e5f8b03526c926d4d01f8b9.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7d9daabed226ba299a77e41009e6422f.html  dir_7d9daabed226ba299a77e41009e6422f.js  dir_8b249d32e9f080bee90369a81b49c852.html  dir_8b249d32e9f080bee90369a81b49c852.js  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  navtreedata.js  navtreeindex0.js  pages.html
docs/d1/d5f/: ChangeLog_8md.html  ChangeLog_8md_source.html
docs/d1/d71/: buffer-test_8c.html  buffer-test_8c.js  buffer-test_8c_source.html
docs/d2/d41/: md_ChangeLog.html
docs/d2/d50/: hexdump-test_8c.html  hexdump-test_8c.js  hexdump-test_8c_source.html
docs/d3/d8e/: hash__djb2-test_8c.html  hash__djb2-test_8c.js  hash__djb2-test_8c_source.html
docs/d3/d91/: utils_8c.html  utils_8c.js  utils_8c_source.html
docs/d4/d00/: median_8c.html  median_8c.js  median_8c_source.html
docs/d4/d64/: sum_8c.html  sum_8c.js  sum_8c_source.html
docs/d5/d3a/: mean_8c.html  mean_8c.js  mean_8c_source.html
docs/d5/d3d/: md_NEWS.html
docs/d5/d60/: utils_8h.html  utils_8h.js  utils_8h_source.html
docs/d6/d2e/: dmath__test_8h.html  dmath__test_8h.js  dmath__test_8h_source.html
docs/d6/dd7/: standart__deviation_8c.html  standart__deviation_8c.js  standart__deviation_8c_source.html
docs/d6/df2/: dstring_8c.html  dstring_8c.js  dstring_8c_source.html
docs/d6/df7/: NEWS_8md.html  NEWS_8md_source.html  range_8c.html  range_8c.js  range_8c_source.html
docs/d6/df8/: max_8c.html  max_8c.js  max_8c_source.html
docs/d7/d00/: dmath_8c.html  dmath_8c.js  dmath_8c_source.html
docs/d7/dce/: min_8c.html  min_8c.js  min_8c_source.html
docs/da/d69/: variance_8c.html  variance_8c.js  variance_8c_source.html
docs/da/ddd/: README_8md.html  README_8md_source.html
docs/da/ded/: test__strcharcount_8c.html  test__strcharcount_8c.js  test__strcharcount_8c_source.html
docs/da/dfb/: dmath_8h.html  dmath_8h.js  dmath_8h_source.html
docs/db/d96/: test__trimwhitespace_8c.html  test__trimwhitespace_8c.js  test__trimwhitespace_8c_source.html
docs/dc/d18/: memory_8h.html  memory_8h.js  memory_8h_source.html
docs/dd/dd8/: filesystem_8h.html  filesystem_8h.js  filesystem_8h_source.html
docs/de/dec/: dstring_8h.html  dstring_8h.js  dstring_8h_source.html
docs/df/d45/: filesystem_8c.html  filesystem_8c.js  filesystem_8c_source.html
docs/df/dd5/: memory_8c.html  memory_8c.js  memory_8c_source.html
docs/df/dfc/: version_8h.html  version_8h.js  version_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js
include/: filesystem.h
include/dop/: filesystem.h  memory.h  utils.h  version.h
pkgconfig/: libdop.pc
src/: Makefile  dmath.c  dstring.c  filesystem.c  memory.c  utils.c
src/dop/: dmath.h  dstring.h  memory.h  utils.h
tests/: Makefile  buffer-test.c  hash_djb2-test.c  hexdump-test.c  run-tests.sh
tests/dmath/: dmath_test.h  max.c  mean.c  median.c  min.c  range.c  standart_deviation.c  sum.c  variance.c
tests/dstring/: test_strcharcount.c  test_trimwhitespace.c
